[package]
name = "doc_item"
version = "0.2.5"
authors = ["Anders Evensen"]
edition = "2018"
description = "Attributes for item-level documentation customization."
readme = "README.md"
repository = "https://github.com/Anders429/doc_item"
license = "MIT OR Apache-2.0"
keywords = ["documentation", "item", "info", "msrv", "nightly"]
categories = ["development-tools", "rust-patterns"]
exclude = [".github/", "tests/"]

[lib]
proc-macro = true

[features]
frontend_test = []

[dependencies]
darling = "0.13.0"
syn = {version="1.0.69", default-features=false, features=["derive", "parsing", "proc-macro"]}
uuid = {version="0.8.2", default-features=false, features=["v4"]}

[dev-dependencies]
indoc = "1.0.3"
rustversion = "1.0.4"
substring = "1.4.5"
thirtyfour_sync = "0.23.0"
trybuild = "1.0.42"

[[example]]
name = "custom_docbox"
crate-type = ["staticlib"]

[[example]]
name = "experimental"
crate-type = ["staticlib"]
