[package]
name = "doc_item"
version = "0.2.5"
authors = ["Anders Evensen"]
edition = "2018"
description = "Attributes for item-level documentation customization."
readme = "README.md"
repository = "https://github.com/Anders429/doc_item"
license = "MIT OR Apache-2.0"
keywords = ["documentation", "item", "info", "msrv", "nightly"]
categories = ["development-tools", "rust-patterns"]
exclude = [".github/", "tests/"]

[lib]
proc-macro = true

[features]
frontend_test = []

[dependencies]
darling = "0.13.1"
syn = {version="1.0.89", default-features=false, features=["derive", "parsing", "proc-macro"]}

[dev-dependencies]
rustversion = "1.0.6"
thirtyfour_sync = "0.27.1"
trybuild = "1.0.56"

[[example]]
name = "custom_docbox"
crate-type = ["staticlib"]

[[example]]
name = "experimental"
crate-type = ["staticlib"]
